# travel-ai-agent

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  run_server.py  test_agent.py  test_unified_agent.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  flight_agent.py  tools.py  travel_agent.py
backend/app/api/: __init__.py  chat.py  health.py
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py
backend/app/models/: __init__.py  agent.py  base.py  flight.py  hotel.py
backend/app/services/: __init__.py  hotel_service.py  serpapi_service.py
docs/: ARCHITECTURE.md
frontend/: README.md
frontend/travel_agent_app/: README.md  pubspec.yaml
frontend/travel_agent_app/android/app/: build.gradle.kts
frontend/travel_agent_app/ios/Runner/: Info.plist
frontend/travel_agent_app/ios/Runner.xcodeproj/: project.pbxproj
frontend/travel_agent_app/lib/: main.dart
frontend/travel_agent_app/lib/models/: api_models.dart  api_models.g.dart  chat_models.dart  chat_models.g.dart  flight_models.dart  flight_models.g.dart  hotel_models.dart  hotel_models.g.dart  models.dart
frontend/travel_agent_app/lib/providers/: chat_provider.dart
frontend/travel_agent_app/lib/screens/: chat_screen.dart  splash_screen.dart
frontend/travel_agent_app/lib/services/: api_service.dart  config_service.dart
frontend/travel_agent_app/linux/: CMakeLists.txt
frontend/travel_agent_app/test/: widget_test.dart
frontend/travel_agent_app/web/: index.html  manifest.json
frontend/travel_agent_app/windows/: CMakeLists.txt
(+13 files in other folders)
